--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple project to analize apache logs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/AndersenAndreoni/undertrace/issues"
   },
-  "homepage": "https://github.com/AndersenAndreoni/undertrace#readme"
+  "homepage": "https://github.com/AndersenAndreoni/undertrace#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
+  }
 }
